<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#f2f2f2"
    android:gravity="center_vertical"
    android:paddingTop="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="1dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/modifier_alerte_modifier_criteres"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/recherche_vous_voulez_margin"
        android:textSize="@dimen/creer_annonce_items"
        android:textColor="#404040"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginBottom="5dp"
        android:textColor="@color/blu_title_donnees_personnelles"
        android:textStyle="bold"
        android:text="@string/creer_alerte_voulez_vous"
        android:textSize="@dimen/creer_annonce_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="@dimen/recherche_acheter_vendre_width"
        android:layout_height="@dimen/recherche_acheter_vendre_height">
        <Button
            android:layout_weight="1"
            android:background="@drawable/creer_alerte_bg_gray"
            android:textAllCaps="false"
            android:id="@+id/acheter"
            android:textSize="@dimen/creer_annonce_entries"
            android:text="@string/creer_alerte_acheter"
            android:textStyle="bold"
            android:textColor="#fff"
            android:layout_marginRight="15dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp" />
        <Button
            android:layout_weight="1"
            android:background="@drawable/creer_alerte_bg_white"
            android:textAllCaps="false"
            android:id="@+id/louer"
            android:textSize="@dimen/creer_annonce_entries"
            android:text="@string/creer_alerte_louer"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/recherche_items_text_marginTop"
        android:layout_marginBottom="@dimen/recherche_items_text_marginBottom"
        android:textColor="@color/blu_title_donnees_personnelles"
        android:textStyle="bold"
        android:text="@string/creer_alerte_where"
        android:textSize="@dimen/creer_annonce_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        style="@style/spinnerItemStyle"
        android:entries="@array/test_spinner"
        android:id="@+id/ville"
        android:layout_width="@dimen/creer_annonce_spinner_width"
        android:layout_height="@dimen/creer_annonce_spinner_height">
    </Spinner>

    <TextView
        android:layout_marginTop="@dimen/recherche_items_text_marginTop"
        android:layout_marginBottom="@dimen/recherche_items_text_marginBottom"
        android:textColor="@color/blu_title_donnees_personnelles"
        android:textStyle="bold"
        android:text="@string/creer_alerte_type_bien"
        android:textSize="@dimen/creer_annonce_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <Button
            android:background="@drawable/creer_alerte_bg_gray"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:id="@+id/appartement"
            android:textSize="@dimen/creer_annonce_entries"
            android:text="@string/creer_alerte_appartement"
            android:textStyle="bold"
            android:textColor="#fff"
            android:layout_marginRight="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            android:background="@drawable/creer_alerte_bg_white"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:id="@+id/villa"
            android:textSize="@dimen/creer_annonce_entries"
            android:text="@string/creer_alerte_villa"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            android:background="@drawable/creer_alerte_bg_white"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:id="@+id/terrain"
            android:textSize="@dimen/creer_annonce_entries"
            android:text="@string/creer_alerte_terrain"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/recherche_items_text_marginTop"
        android:layout_marginBottom="@dimen/recherche_items_text_marginBottom"
        android:textColor="@color/blu_title_donnees_personnelles"
        android:textStyle="bold"
        android:text="@string/creer_alerte_surface"
        android:textSize="@dimen/creer_annonce_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_marginRight="10dp"
            android:background="@drawable/creer_alerte_bg_white"
            android:layout_weight="1"
            android:inputType="number"
            android:id="@+id/surface_min"
            android:hint="@string/creer_alerte_minimum"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:background="@drawable/creer_alerte_bg_white"
            android:layout_weight="1"
            android:inputType="number"
            android:id="@+id/surface_maxi"
            android:hint="@string/creer_alerte_maximum"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/recherche_items_text_marginTop"
        android:layout_marginBottom="@dimen/recherche_items_text_marginBottom"
        android:textColor="@color/blu_title_donnees_personnelles"
        android:textStyle="bold"
        android:text="@string/creer_alerte_budget"
        android:textSize="@dimen/creer_annonce_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:background="@drawable/creer_alerte_bg_white"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:inputType="number"
            android:id="@+id/budget_min"
            android:hint="@string/creer_alerte_minimum"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:background="@drawable/creer_alerte_bg_white"
            android:layout_weight="1"
            android:inputType="number"
            android:id="@+id/budget_maxi"
            android:hint="@string/creer_alerte_maximum"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/recherche_items_text_marginTop"
        android:layout_marginBottom="@dimen/recherche_items_text_marginBottom"
        android:textColor="@color/blu_title_donnees_personnelles"
        android:textStyle="bold"
        android:text="@string/creer_alerte_whatsapp"
        android:textSize="@dimen/creer_annonce_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:background="@drawable/creer_alerte_bg_white"
        android:inputType="phone"
        android:id="@+id/whatsapp"
        android:hint="@string/creer_alerte_votre_numero"
        android:layout_width="180dp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="@dimen/modifier_alert_enregistrer_layout_margin_top"
        android:clickable="true"
        android:focusable="true"
        android:layout_gravity="center"
        android:paddingRight="@dimen/modifier_alert_enregistrer_layout_padding_Right"
        android:paddingLeft="@dimen/modifier_alert_enregistrer_layout_padding_left"
        android:paddingBottom="@dimen/modifier_alert_enregistrer_layout_padding_up_down"
        android:paddingTop="@dimen/modifier_alert_enregistrer_layout_padding_up_down"
        android:id="@+id/enregistrer_alert"
        android:background="@drawable/creer_alerte_bg_blue"
        android:orientation="horizontal"
        android:layout_width="@dimen/modifier_alert_enregistrer_layout_width"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/modifier_alert_enregistrer_layout_padding_left"
        android:paddingStart="@dimen/modifier_alert_enregistrer_layout_padding_Right">
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/modifier_alerte_enregistrer"
            android:textSize="@dimen/modifier_alert_enregistrer_layout_text"
            android:textColor="#fff"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <ImageView
            android:src="@drawable/save"
            android:layout_gravity="end"
            android:layout_width="@dimen/modifier_alert_enregistrer_layout_image"
            android:layout_height="@dimen/modifier_alert_enregistrer_layout_image" />
    </LinearLayout>

    <Button
        android:id="@+id/supprimer_alert"
        android:textColor="#f00"
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        android:textSize="@dimen/modifier_alert_supprimer_size"
        android:textStyle="bold"
        android:text="@string/modifier_alerte_supprimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>